--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,8 @@
   <!-- jQuery & jQuery UI -->
   <%= stylesheet_link_tag "application" %>
   
-  <%= javascript_include_tag "application" %>                      
+  <%= javascript_include_tag "application" %>    
+  <%= javascript_include_tag "http://api-maps.yandex.ru/1.1/index.xml?key=AMIjr04BAAAAiqLwEAIAxJ3Rc1d-Pqr4lDahYvOYW2vbYVEAAAAAAAAAAADDG5GEvPqd72eJsxxDy4dds6D8OA==" %>                      
   <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e5c782a66f297f6"></script>
 
 </head>
