--- a/app/views/main/_volunteer_information.html.erb
+++ b/app/views/main/_volunteer_information.html.erb
@@ -9,9 +9,9 @@
 		<div class="p-main-suggest-images">
 			<% @missings.each do |missing| %>                                         
 			    <% if missing.photos.first %>
-				<%= image_tag missing.photos.first.photo.url(:thumb), { :size => "30x30", "data-name" => missing.name, "data-date" => Russian.strftime(missing.created_at, "%e %B %Y года") } %>   
+				<%= image_tag missing.photos.first.photo.url(:thumb), { :size => "30x30", "data-url" => missing_path(missing), "data-name" => missing.name, "data-date" => Russian.strftime(missing.created_at, "%e %B %Y года") } %>   
 				<% else %>
-				<%= image_tag 'no_photo.jpg', { :size => "30x30", "data-name" => missing.name, "data-date" => missing.created_at }  %>
+				<%= image_tag 'no_photo.jpg', { :size => "30x30", "data-url" => url_for(missing), "data-name" => missing.name, "data-date" => missing.created_at }  %>
 				<% end %> 
 			<% end %> 	
 			<% (45-@missings.length).times do |count|%>
