Update questions, missing show page

--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -332,7 +332,7 @@ input[type="text"] {
 	position: relative;
 	/* z-index: 1; */
 	line-height: 1.2em;
-	padding: 0.2em 0 0.3em 20px;  
+	padding: 0 0 0.3em 20px;  
 	cursor: pointer;
 	
 	color: #666;
