--- a/app/assets/stylesheets/app/style.css
+++ b/app/assets/stylesheets/app/style.css
@@ -58,7 +58,7 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
  * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
  */
 
-body { font:13px/1.231 arial, sans-serif; *font-size:small; } /* Hack retained to preserve specificity */
+body { font:13px/1.231 tahoma, arial, sans-serif; *font-size:small; } /* Hack retained to preserve specificity */
 
 /* Normalize monospace sizing:
    en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
@@ -139,7 +139,7 @@ input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0px 0px 5
 body, select, input, textarea {
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
   color: #222;
-  font-family: Arial, serif;
+  font-family: Tahoma;
   /* Set your base font here, to apply evenly */
   /* font-family: Georgia, serif;  */
 }
