--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -484,7 +484,7 @@
 	
 	background: #dae4f1; /* Old browsers */
 	background: -moz-linear-gradient(top, #e2ebfc 0%, #c4d4f2 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e2ebfc), color-stop(100%,#v)); /* Chrome,Safari4+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e2ebfc), color-stop(100%,#c4d4f2)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #e2ebfc 0%,#c4d4f2 100%); /* Chrome10+,Safari5.1+ */
 	background: -o-linear-gradient(top, #e2ebfc 0%,#c4d4f2 100%); /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #e2ebfc 0%,#c4d4f2 100%); /* IE10+ */
