--- a/app/assets/stylesheets/app/style.css
+++ b/app/assets/stylesheets/app/style.css
@@ -139,8 +139,8 @@ input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0px 0px 5
 body, select, input, textarea {
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
   color: #222;
-  font-family: Tahoma;
-  /* Set your base font here, to apply evenly */
+  font-family: Tahoma, arial, sans-serif;
+  /* Set your base  font here, to apply evenly */
   /* font-family: Georgia, serif;  */
 }
 
