--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -446,16 +446,18 @@ input[type="text"] {
 	border-radius: 7px;
 	
 	background: #fefefe;
-	border: 2px solid rgba(0,0,0,.15); 
+    background-clip: padding-box;
+	border: 2px solid rgba(0,0,0,.08); 
 	margin: 0 64px 0 0;
+
+    padding: 11px 14px;
 
 }
 
 .b-form__question.selected {
-	background: #fefefe;
-	border: 2px solid rgba(0,0,0,.15); 
+	background-color: #fefefe;
 	margin: 0 64px 0 0;  
-	
+    border: 3px solid rgba(0,0,0,.09)	
 }
 
 .b-form__question.selected.map {
@@ -463,16 +465,11 @@ input[type="text"] {
 }               
                          
 .b-form__question_form {
-	padding: 11px 14px;   
-	
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
 
-.selected .b-form__question_form {
-	border: 1px solid #d9d9d9; 
-}
 /*
 .b-form__question_form {
 	padding: 12px 15px;
@@ -532,21 +529,22 @@ input[type="text"] {
 .b-form__question_map { 
 	width: 100%;
 }
-                              
-.b-form__question_map_container {
-	padding-right: 20px;
-}             
+
+.b-form__question_search_container, .b-form__question_map_description {
+  width: 49%;
+}
+
 .b-form__question_search_container{
-	margin-bottom: 5px;
+	margin-bottom: 1%;
 }                     
 
 .b-form__question_map_search { 
-	width: 228px;  
-	margin-right: 7px;
+  width: 200px;
+  margin-right: 5px;
 }               
 
 .b-form__question_map_container, .b-form__question_yandex_map {
-	width: 300px;
+	width: 100%;
 	height: 225px;
 }
 
@@ -567,6 +565,10 @@ input[type="text"] {
 	color: #0065cc;         
 	
 	cursor: pointer;
+	
+	float: left;
+	width: 24%;
+	margin-right: 1%;
 } 	
 
 .b-form__question_map_item:hover {
